syntax = "proto3";

package swarm;

import "simulation/swarm/proto/missile_config.proto";

// Missile swarm configuration.
message MissileSwarmConfig {
  // Number of missiles.
  uint32 num_missiles = 1;

  // Missile configuration.
  MissileConfig missile_config = 2;
}
